FIX: Weird scrollbar on channel list in sidebar (#218)

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -261,10 +261,14 @@ $float-height: 530px;
     }
   }
 }
+.topic-chat-drawer-content {
+  height: calc(#{$float-height} - #{$header-height});
+}
 
 .tc-channels {
   overflow-y: auto;
-  height: calc(#{$float-height} - #{$header-height});
+  height: 100%;
+
   .chat-channel-divider {
     font-weight: bold;
     padding: 0.5em;
